
# Add your source files here
pth_sources = files(
    'pth_attr.c',
    'pth_cancel.c',
    'pth_clean.c',
    'pth_compat.c',
    'pth_data.c',
    'pth_debug.c',
    'pth_errno.c',
    'pth_event.c',
    'pth_ext.c',
    'pth_fork.c',
    'pth_high.c',
    'pth_lib.c',
    'pth_mctx.c',
    'pth_msg.c',
    'pth_pqueue.c',
    'pth_ring.c',
    'pth_sched.c',
    'pth_string.c',
    'pth_sync.c',
    'pth_syscall.c',
    'pth_tcb.c',
    'pth_time.c',
    'pth_uctx.c',
    'pth_util.c',
    'pth_vers.c',
)

fibers_ss.add(pth_sources)